aggiunti test battleMenu