@@ -50,7 +50,8 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.2</version>
                 <configuration>
-                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-exports=java.base/jdk.internal.util.random=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
         </plugins>
